feat: Update Dashboard and LandingPage components for improved UI and functionality

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/api/clob/:path*",
       "destination": "https://clob.polymarket.com/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
